# sysinfolib

./: README.md  setup.cfg
requirements/: requirements-dev.txt
sysinfolib/: __init__.py  informers.py
