[metadata]
name = sysinfolib
version = attr: sysinfolib.__version__
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = Library for obtaining system information and user information..
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/sysinfolib/
project_urls =
    Documentation = https://github.com/smartlegionlab/sysinfolib/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/sysinfolib/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    sysinfolib
    smartlegionlab

[options]
package_dir =
packages = find:
python_requires = >= 3.6
include_package_data = true
zip_safe = false
install_requires =
    requests~=2.32.3
    psutil~=5.9.8


[coverage:run]
omit =
    venv/*
    .pytest_cache
    *__init__.py